employee-management-ui/redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: app-em-test
spec:
  redirectScheme:
    scheme: https
    permanent: true
